# scene

./: pyproject.toml  readme.md
example/: render.py
example/resources/: monkey.mtl
scene/: __init__.py  camera.py  object.py  scene.py
scene/resources/: fragment.glsl  vertex.glsl
